modules/security_group/main.tf
variable "vpc_id" {
   description = "ID of the VPC"
   type        = string
}

# variable "my_ip" {
#    description = "My IP address"
#    type = string
# }

resource "aws_security_group" "tutorial_jenkins_sg" {
   name = "tutorial_jenkins_sg"
   description = "Security group for jenkins server"
   vpc_id = var.vpc_id

   ingress {
      description = "Allow all traffic through port 8080"
      from_port = "8080"
      to_port = "8080"
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
   }

   ingress {
      description = "Allow SSH from my computer"
      from_port = "22"
      to_port = "22"
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"] 
      #["${var.my_ip}/32"]
   }

   egress {
      description = "Allow all outbound traffic"
      from_port = "0"
      to_port = "0"
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
   }

   tags = {
      Name = "tutorial_jenkins_sg"
   }
}
